--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/sanctum": "^2.11",
+        "laravel/scout": "^9.2",
         "laravel/tinker": "^2.5",
         "tightenco/ziggy": "^1.3"
     },
