--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.3.1",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.3.5",
         "sass": "^1.35.1",
         "sass-loader": "^12.1.0",
+        "tailwindcss": "^2.2.4",
         "vue": "^2.6.14",
+        "vue-loader": "^15.9.7",
         "vue-router": "^3.5.2",
         "vue-template-compiler": "^2.6.14",
         "vuex": "^3.6.2"
+    },
+    "dependencies": {
+        "@headlessui/vue": "^1.3.0"
     }
 }
