--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/scout": "^9.2",
         "laravel/tinker": "^2.5",
+        "santigarcor/laratrust": "^6.3",
         "tightenco/ziggy": "^1.3"
     },
     "require-dev": {
