--- a/package.json
+++ b/package.json
@@ -24,7 +24,5 @@
         "vue-template-compiler": "^2.6.14",
         "vuex": "^3.6.2"
     },
-    "dependencies": {
-        "@headlessui/vue": "^1.3.0"
-    }
+    "dependencies": {}
 }
