--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:tHxg4FqDITtENsh9toL3PT/5L4U1goxZkwd7wRFVK50=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://ec2-18-139-162-119.ap-southeast-1.compute.amazonaws.com/
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,8 +10,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
